--- a/BookOnShelfBlazor/wwwroot/app.css
+++ b/BookOnShelfBlazor/wwwroot/app.css
@@ -138,6 +138,14 @@ h1:focus {
     display: inline-block;
     border: 1px solid #ccc;
     padding: 10px;
+    max-width:18%;
+}
+.image-container-pfp {
+    display: inline-block;
+    border: 1px solid #ccc;
+    padding: 10px;
+    width: 18%;
+    height: 100%;
 }
 
     .image-container img {
@@ -247,8 +255,23 @@ h1:focus {
 .WriterInfo{
     flex-wrap:revert;
     flex-basis: 100%;
+    display:flex;
 }
 
 .AboutTheWriter{
     flex:1;
+  margin-left: 25px;
+  margin-right: 25px;
+
+}
+
+.hr-inbetween {
+    flex-wrap: revert;
+    flex-basis: 100%;
+}
+
+.Reviews {
+    flex-wrap: revert;
+    flex-basis: 100%;
+    display: flex;
 }
