--- a/BookOnShelfBlazor/Components/Account/Pages/Register.razor
+++ b/BookOnShelfBlazor/Components/Account/Pages/Register.razor
@@ -118,6 +118,8 @@
 
     private UserInfo UserInfo { get; set; } = new();
 
+    public Byte[] TemporaryProfilePicture { get; set; }
+
     private string? Message => identityErrors is null ? null : $"Error: {string.Join(", ", identityErrors.Select(error => error.Description))}";
 
     public async Task RegisterUser(EditContext editContext)
@@ -202,6 +204,10 @@
 
         DateOnly ChosenDate = new DateOnly(Year, Month, Day);
 
+        var DeafultImagePath = "wwwroot/Images/NoProfilePicture.png";
+        var DeafultImage = File.ReadAllBytes(DeafultImagePath);
+        TemporaryProfilePicture = DeafultImage;
+
         var UserInfo = new UserInfo
             {
                 FirstName = Input.FirstName,
@@ -214,7 +220,9 @@
                 Street = Input.Street,
                 HouseNumber = Input.HouseNumber,
                 HouseNumberAddition = Input.HouseNumberAddition,
-                PostalCode = Input.PostalCode
+                PostalCode = Input.PostalCode,
+                ProfilePicture = TemporaryProfilePicture
+
             };
         Context.UserInfo.Add(UserInfo);
 
